Major fixes to dark theme (inc #7), minor fixes to #fixarm
- Better painted marks and visits
- Painted group selector (on home page) and dropdown menu for displaying items (on subject's page)
- Painted input fields on login page

- Added '?' if visit is empty (no data)
- Fixed maxheight50 class (no items with this class will be vertically aligined)
- Fixed displaying half visit if student's name is too big

--- a/fixarm-dark.user.css
+++ b/fixarm-dark.user.css
@@ -9,7 +9,6 @@
 @license        GPL-3.0-only
 @preprocessor   less
 ==/UserStyle== */
-
 @-moz-document domain("arm.iipo.tu-bryansk.ru") {
     body {
         color: #ddd;
@@ -20,28 +19,39 @@
             border-color: lightgray;
         }
         td {
+            color: #eee;
             border-color: lightgray;
-
             > .visit-full,
             > .visit-none,
             > .visit-important,
+            > .visit-half,
+            &.visit-empty,
             .div-percent {
                 color: white;
             }
             > .visit-full,
-            .bg,
-            .mark_5 {
+            .bg {
                 background-color: #218838;
             }
-            > .visit-none,
+            .mark_5 {
+                background-color: darkgreen;
+            }
             .mark_3 {
-                background-color: #c82333;
+                background-color: orangered;
+            }
+            > .visit-none,
+            .mark_2 {
+                background-color: crimson;
             }
             > .visit-important {
-                background-color: #0069d9;
+                background-color: slateblue;
             }
+            > .visit-half,
             .mark_4 {
-                background-color: #d8a200;
+                background-color: goldenrod;
+            }
+            .mark_1 {
+                background-color: darkred;
             }
             &.work-item:hover {
                 border-color: cyan;
@@ -62,8 +72,7 @@
         border-color: lightgray;
     }
     .card {
-        background-color: #111;
-
+        background-color: transparent;
         &-header {
             background-color: #333;
         }
@@ -74,15 +83,23 @@
             }
         }
     }
-    .input-group-text {
-        color: #ccc;
-        background-color: #3f3f3f;
-
-        &.text-muted {
-            color: darkgray !important;
+    .border-bottom {
+        border-bottom-color: #a9a9a9b0 !important;
+    }
+    .input-group-text,
+    .custom-select {
+        border-color: #a9a9a9cf !important;
+    }
+    .input-group {
+        .input-group-text {
+            color: #d8d8d8;
+            background-color: #404040;
+            &.text-muted {
+                color: #dfdfdf !important;
+            }
         }
-        &.border-bottom {
-            border-bottom-color: darkgray !important;
+        select {
+            color: #dedede;
         }
     }
     .custom-select {
@@ -94,31 +111,40 @@
         border-top-color: rgba(255, 255, 255, 0.5);
     }
     .dropdown-menu {
-        right: 0;
         background-color: #202020;
-
         .dropdown-item:not(.active) {
             color: #ddd !important;
-            background-color: #202020;
+            border-top: 1px solid darkgray;
+            &:last-child {
+                border-bottom: 1px solid darkgray;
+            }
+            &:hover {
+                color: #f4f4f4 !important;
+                background-color: #606060;
+            }
         }
     }
     .container ul.list-group > li.list-group-item {
         background-color: #444;
-
         h6 {
             color: #ddd !important;
-
             > span {
                 color: #aaa;
-
                 &.text-positive {
                     color: mediumseagreen;
                 }
-
                 &.text-negative {
                     color: salmon;
                 }
             }
+        }
+    }
+    .form-group > div > input {
+        &[type='text'],
+        &[type='password'] {
+            background-color: #3a3a3a;
+            border-color: #aaa;
+            color: #d8d8d8;
         }
     }
 }
